--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <input name="second-num" id="second-num" />
         <button id="calculate">Calculate</button>
         <br />
-        <!--<output></output>--> <!-- Commented out for the error to show up -->
+        <output></output><!-- Comment out for the error to show up -->
       </fieldset>
     </form>
 
@@ -124,10 +124,10 @@
       catch(e){
       console.log('Error has occured');
       //console.log(e);
-    }
-    finally{
+      }
+      finally{
       console.log('This is the finally block');
-    }
+      }
       
     });
     
